# keithly_calibrator

./: .gitignore  LICENSE  __main__.py  pyproject.toml  to_exe.py
custom/: widgets.py
main/: window_constructor.py  window_constructor.ui
main/widgets/: calibrate.ui  graph_widget.py  graph_widget.ui  keithley_controll.py  keithley_controll.ui
model/: keithly_script.json  keithly_script.py
modules/serial/: DialogSerial.ui  DialogSerialTCP.ui  QLineEdit_custom_resize.py  connection_manager.py  customComboBox_COMport.py  main_serial_dialog.py  main_serial_dialog_tcp.py  relay_server.py
src/: async_task_manager.py  cmd_interface.py  craft_custom_widget.py  device_registers.py  log_config.py  main_window_maker.py  pars_util.py  plot_renderer.py  serial_interface.py
src/keithly_calibrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
